# openstructure

./: .gitlab-ci.yml  CHANGELOG.txt  CMakeLists.txt  CTestConfig.cmake  ReadMe.txt
actions/: CMakeLists.txt  ost-compare-ligand-structures  ost-compare-structures  ost-compare-structures-new
build_configs/: buildconfig_bc2  buildconfig_bc2_static  darwin_macports.txt  win32
cmake_support/: FindNumpy.cmake  FindOPENSTRUCTURE.cmake  FindPython.cmake  OST.cmake
conda_recipe/: meta.yaml
deployment/linux/: CMakeLists.txt
deployment/macos/: CMakeLists.txt
doc/: make.py
docker/: Dockerfile  README.rst  test_docker.py
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
modules/base/doc/: generic.rst  testutils.rst
modules/base/pymod/: CMakeLists.txt  __init__.py.in  table.py  testutils.py
modules/base/src/: CMakeLists.txt  paged_array.hh
modules/bindings/doc/: bindings.rst  dockq.rst  dssp.rst  tmtools.rst
modules/bindings/pymod/: CMakeLists.txt  blast.py  cadscore.py  dockq.py  dssp.py  export_tmalign.cc  hhblits.py  hhblits2.py  hhblits3.py  (+2 more)
modules/config/: CMakeLists.txt  config.hh.in
modules/doc/: actions.rst  deprecated_actions.rst  install.rst  intro-01.rst
modules/img/: CMakeLists.txt
modules/io/pymod/: CMakeLists.txt  __init__.py  export_mmcif_io.cc  export_omf_io.cc  export_pdb_io.cc  remote.py  wrap_io.cc
modules/seq/alg/pymod/: CMakeLists.txt  __init__.py  aaindex.py  mat.py  wrap_seq_alg.cc
scripts/: CMakeLists.txt  bump-version.py  ost-nightly-build.sh  ost.in  ost_config.in  ost_startup.py.in
singularity/: README.rst  Singularity
(+323 files in other folders)
